# ai-profile

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/rag/: embedder.py  loader.py  retriever.py
backend/app/routers/: chat.py  ingest.py  profile.py
backend/data/: profile.yaml
backend/data/documents/: about-me.md  certificates-summary.md  projects-summary.md  publications-summary.md  skills-summary.md
backend/scripts/: ingest.py
frontend/: .env.local  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatWidget.tsx
frontend/src/components/chat/: ChatBubble.tsx  ChatBubbleClient.tsx
frontend/src/components/sections/: About.tsx  Certificates.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Projects.tsx  Resume.tsx  Skills.tsx
frontend/src/hooks/: useFadeIn.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts  profile.ts
